--- a/backend/locales/en.json
+++ b/backend/locales/en.json
@@ -21,7 +21,7 @@
       "text": "You will be signed out of this session"
     },
     "menu": {
-      "2fa": "Two-factor auth",
+      "2fa": "Two-factor authentication",
       "change_lang": "Change language",
       "change_pass": "Change password",
       "change_user": "Change username",
